--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@
                                                         <path d="M14.5 4h-12.12c-0.057 0.012-0.123 0.018-0.19 0.018-0.552 0-1-0.448-1-1 0-0.006 0-0.013 0-0.019l12.81-0.499v-1.19c0.005-0.041 0.008-0.089 0.008-0.138 0-0.652-0.528-1.18-1.18-1.18-0.049 0-0.097 0.003-0.144 0.009l-11.374 1.849c-0.771 0.289-1.31 1.020-1.31 1.877 0 0.011 0 0.023 0 0.034l-0 10.728c-0 0.003-0 0.006-0 0.010 0 0.828 0.672 1.5 1.5 1.5 0 0 0 0 0 0h13c0 0 0 0 0 0 0.828 0 1.5-0.672 1.5-1.5 0-0.004-0-0.007-0-0.011v-8.999c0-0.012 0.001-0.027 0.001-0.041 0-0.801-0.649-1.45-1.45-1.45-0.018 0-0.036 0-0.053 0.001zM13 11c-0.828 0-1.5-0.672-1.5-1.5s0.672-1.5 1.5-1.5c0.828 0 1.5 0.672 1.5 1.5s-0.672 1.5-1.5 1.5z"></path>
                                                     </svg>
                                                     <span class="pill__text">MYR 157.12K</span>
-                                                    <button class="btn plan btn-pill ml-1 mr--2 mr-n2">
-                                                        <svg class="pill__iconBtn plan small" aria-label="WalletRefresh" viewBox="-1.5 -2.5 24 24"><path d='M17.83 4.194l.42-1.377a1 1 0 1 1 1.913.585l-1.17 3.825a1 1 0 0 1-1.248.664l-3.825-1.17a1 1 0 1 1 .585-1.912l1.672.511A7.381 7.381 0 0 0 3.185 6.584l-.26.633a1 1 0 1 1-1.85-.758l.26-.633A9.381 9.381 0 0 1 17.83 4.194zM2.308 14.807l-.327 1.311a1 1 0 1 1-1.94-.484l.967-3.88a1 1 0 0 1 1.265-.716l3.828.954a1 1 0 0 1-.484 1.941l-1.786-.445a7.384 7.384 0 0 0 13.216-1.792 1 1 0 1 1 1.906.608 9.381 9.381 0 0 1-5.38 5.831 9.386 9.386 0 0 1-11.265-3.328z' /></svg>
+                                                    <button class="btn plan btn-pillml-1 mr--2 mr-n2 d-block small">
+                                                        <svg class="pill__iconBtn plan" aria-label="WalletRefresh" viewBox="-1.5 -2.5 24 24"><path d='M17.83 4.194l.42-1.377a1 1 0 1 1 1.913.585l-1.17 3.825a1 1 0 0 1-1.248.664l-3.825-1.17a1 1 0 1 1 .585-1.912l1.672.511A7.381 7.381 0 0 0 3.185 6.584l-.26.633a1 1 0 1 1-1.85-.758l.26-.633A9.381 9.381 0 0 1 17.83 4.194zM2.308 14.807l-.327 1.311a1 1 0 1 1-1.94-.484l.967-3.88a1 1 0 0 1 1.265-.716l3.828.954a1 1 0 0 1-.484 1.941l-1.786-.445a7.384 7.384 0 0 0 13.216-1.792 1 1 0 1 1 1.906.608 9.381 9.381 0 0 1-5.38 5.831 9.386 9.386 0 0 1-11.265-3.328z' /></svg>
                                                     </button>
                                                 </div>
                                                 
@@ -151,8 +151,8 @@
                         <div class="sidebar-header__actions">
                             <a herf="#" class="btn-deposit btn btn-1 btn-pill btnh btn--hover">Deposit</a>
                             <a herf="#" class="btn-withdraw btn btn-1 btn-pill btnh btn--hover">Withdraw</a>
-                            <button data-action="toggle-app" class="d-md-none btn btn-1 btn-pill">
-                                <svg class="icon" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M10,13H3a1,1,0,0,0-1,1v7a1,1,0,0,0,1,1h7a1,1,0,0,0,1-1V14A1,1,0,0,0,10,13ZM9,20H4V15H9ZM21,2H14a1,1,0,0,0-1,1v7a1,1,0,0,0,1,1h7a1,1,0,0,0,1-1V3A1,1,0,0,0,21,2ZM20,9H15V4h5Zm1,4H14a1,1,0,0,0-1,1v7a1,1,0,0,0,1,1h7a1,1,0,0,0,1-1V14A1,1,0,0,0,21,13Zm-1,7H15V15h5ZM10,2H3A1,1,0,0,0,2,3v7a1,1,0,0,0,1,1h7a1,1,0,0,0,1-1V3A1,1,0,0,0,10,2ZM9,9H4V4H9Z" /></svg>
+                            <button data-action="toggle-app" class="d-md-none btn btn-1 btn-pill btn-pn1">
+                                <svg class="icon16" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M10,13H3a1,1,0,0,0-1,1v7a1,1,0,0,0,1,1h7a1,1,0,0,0,1-1V14A1,1,0,0,0,10,13ZM9,20H4V15H9ZM21,2H14a1,1,0,0,0-1,1v7a1,1,0,0,0,1,1h7a1,1,0,0,0,1-1V3A1,1,0,0,0,21,2ZM20,9H15V4h5Zm1,4H14a1,1,0,0,0-1,1v7a1,1,0,0,0,1,1h7a1,1,0,0,0,1-1V14A1,1,0,0,0,21,13Zm-1,7H15V15h5ZM10,2H3A1,1,0,0,0,2,3v7a1,1,0,0,0,1,1h7a1,1,0,0,0,1-1V3A1,1,0,0,0,10,2ZM9,9H4V4H9Z" /></svg>
                             </button>
                             <button data-action="toggle-sidebar" class="btn btn-2 btn-pill btnh btn--hover">
                                 <svg width="20px" height="20px" viewBox="0 0 1024 1024" class="icon"><path d="M364.8 106.666667L298.666667 172.8 637.866667 512 298.666667 851.2l66.133333 66.133333L768 512z" /></svg>
@@ -322,6 +322,11 @@
                                     <img src="image/menu-vip.png" /><span class="span-toggle">VIP</span>
                                 </a>
                             </li>
+                            <li>
+                                <a href="#">
+                                    <img src="image/menu-support.png" /><span class="span-toggle">Live Support</span>
+                                </a>
+                            </li>
                         </ul>
                     </nav>
 
@@ -346,7 +351,7 @@
                     </div>
                     <div class="topbar">
                         <div class="topbar__left">
-                            <div class="btn btn-1 btn-pill btn-with-icon btn--no-active btn--no-hover" id="dompet">
+                            <div class="btn btn-1 btn-pill btn-with-icon btn--no-active btn--no-hover p_p1" id="dompet">
                                 <span class="pill__iconBtn btn--no-active" aria-label="Wallet">
                                     <!-- wallet icon -->
                                     <svg class="icon" viewBox="-3 -3 24 24">
@@ -354,12 +359,12 @@
                                     </svg>
                                 </span>
                                 <span class="pill__text"><span class="currency">MYR</span> 157.12K</span>
-                                <button class="btn plan btn-pill ml-1 mr--2 mr-n2">
-                                    <svg class="pill__iconBtn plan small" aria-label="WalletRefresh" viewBox="-1.5 -2.5 24 24"><path d='M17.83 4.194l.42-1.377a1 1 0 1 1 1.913.585l-1.17 3.825a1 1 0 0 1-1.248.664l-3.825-1.17a1 1 0 1 1 .585-1.912l1.672.511A7.381 7.381 0 0 0 3.185 6.584l-.26.633a1 1 0 1 1-1.85-.758l.26-.633A9.381 9.381 0 0 1 17.83 4.194zM2.308 14.807l-.327 1.311a1 1 0 1 1-1.94-.484l.967-3.88a1 1 0 0 1 1.265-.716l3.828.954a1 1 0 0 1-.484 1.941l-1.786-.445a7.384 7.384 0 0 0 13.216-1.792 1 1 0 1 1 1.906.608 9.381 9.381 0 0 1-5.38 5.831 9.386 9.386 0 0 1-11.265-3.328z' /></svg>
+                                <button class="btn plan btn-pillml-1 mr--2 mr-n2 d-block small">
+                                    <svg class="pill__iconBtn plan" aria-label="WalletRefresh" viewBox="-1.5 -2.5 24 24"><path d='M17.83 4.194l.42-1.377a1 1 0 1 1 1.913.585l-1.17 3.825a1 1 0 0 1-1.248.664l-3.825-1.17a1 1 0 1 1 .585-1.912l1.672.511A7.381 7.381 0 0 0 3.185 6.584l-.26.633a1 1 0 1 1-1.85-.758l.26-.633A9.381 9.381 0 0 1 17.83 4.194zM2.308 14.807l-.327 1.311a1 1 0 1 1-1.94-.484l.967-3.88a1 1 0 0 1 1.265-.716l3.828.954a1 1 0 0 1-.484 1.941l-1.786-.445a7.384 7.384 0 0 0 13.216-1.792 1 1 0 1 1 1.906.608 9.381 9.381 0 0 1-5.38 5.831 9.386 9.386 0 0 1-11.265-3.328z' /></svg>
                                 </button>
                             </div>
 
-                            <div class="btn btn-1 btn-pill btn-with-icon btn--no-active btn--no-hover icon-right p_p1">
+                            <div class="btn btn-1 btn-pill btn-with-icon btn--no-active btn--no-hover icon-right">
                                 <button class="pill__iconBtn btn--no-active" aria-label="Gift">
                                     <!-- gift icon -->
                                     <svg class="icon" viewBox="-2 -2 20 20">
@@ -371,7 +376,7 @@
                                 <span class="pill__text">9,000,000</span>
                             </div>
 
-                            <a href="#" class="btn btn-1 btn-pill btn-with-icon btn--no-active btn--no-hover  p_p1" id="playerBtn" type="button">
+                            <a href="#" class="btn btn-1 btn-pill btn-with-icon btn--no-active btn--no-hover" id="playerBtn" type="button">
                                 <span class="pill__iconBtn btn--no-active" aria-label="Player">
                                     <svg class="icon" viewBox="-3 -1 20 20"><path d="M12.517 12.834v1.9a1.27 1.27 0 0 1-1.267 1.267h-9.5a1.27 1.27 0 0 1-1.267-1.267v-1.9A3.176 3.176 0 0 1 3.65 9.667h5.7a3.176 3.176 0 0 1 3.167 3.167zM3.264 5.48A3.236 3.236 0 1 1 6.5 8.717a3.236 3.236 0 0 1-3.236-3.236z" /></svg>
 
