--- a/index.html
+++ b/index.html
@@ -505,11 +505,12 @@
                                             <div class="wheel__scroller">
                                                 <div class="wheel__spacer"></div>
 
-                                                <div class="wheel__item" data-value="en">English</div>
-                                                <div class="wheel__item" data-value="zh">简体中文</div>
-                                                <div class="wheel__item" data-value="ja">日本語</div>
-                                                <div class="wheel__item" data-value="ko">한국어</div>
-                                                <div class="wheel__item" data-value="ms">Bahasa Melayu</div>
+                                                <div class="wheel__item" data-value="en">
+<img src="image/flag-en.png" />English</div>
+                                                <div class="wheel__item" data-value="zh">
+<img src="image/flag-cn.png" />简体中文</div>
+                                                <div class="wheel__item" data-value="ms">
+<img src="image/flag-my.png" />Bahasa Melayu</div>
 
                                                 <div class="wheel__spacer"></div>
                                             </div>
