--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        
+
 
                                     </div>
                                     <div class="sidebar-header__quick">
@@ -128,7 +128,7 @@
                                                         <svg class="pill__iconBtn plan" aria-label="WalletRefresh" viewBox="-1.5 -2.5 24 24"><path d='M17.83 4.194l.42-1.377a1 1 0 1 1 1.913.585l-1.17 3.825a1 1 0 0 1-1.248.664l-3.825-1.17a1 1 0 1 1 .585-1.912l1.672.511A7.381 7.381 0 0 0 3.185 6.584l-.26.633a1 1 0 1 1-1.85-.758l.26-.633A9.381 9.381 0 0 1 17.83 4.194zM2.308 14.807l-.327 1.311a1 1 0 1 1-1.94-.484l.967-3.88a1 1 0 0 1 1.265-.716l3.828.954a1 1 0 0 1-.484 1.941l-1.786-.445a7.384 7.384 0 0 0 13.216-1.792 1 1 0 1 1 1.906.608 9.381 9.381 0 0 1-5.38 5.831 9.386 9.386 0 0 1-11.265-3.328z' /></svg>
                                                     </button>
                                                 </div>
-                                                
+
                                             </li>
                                             <li class="list-unstyled">
                                                 <button class="btn btn-2 btn-pill" aria-label="Gift">
@@ -150,7 +150,9 @@
                         <div class="sidebar-header__actions">
                             <a herf="#" class="btn-deposit btn btn-1 btn-pill btnh btn--hover">Deposit</a>
                             <a herf="#" class="btn-withdraw btn btn-1 btn-pill btnh btn--hover">Withdraw</a>
-                            <a herf="#" class="btn-bet btn btn-1 btn-pill btnh btn--hover">Bets</a>
+                            <a herf="#" class="btn-bet btn btn-1 btn-pill btnh btn--hover btn-pn1">
+                                <svg class="icon icon16" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" data-name="Layer 1"><path d="M9,12H7a1,1,0,0,0,0,2H9a1,1,0,0,0,0-2ZM8,10h4a1,1,0,0,0,0-2H8a1,1,0,0,0,0,2Zm1,6H7a1,1,0,0,0,0,2H9a1,1,0,0,0,0-2Zm12-4H18V3a1,1,0,0,0-.5-.87,1,1,0,0,0-1,0l-3,1.72-3-1.72a1,1,0,0,0-1,0l-3,1.72-3-1.72a1,1,0,0,0-1,0A1,1,0,0,0,2,3V19a3,3,0,0,0,3,3H19a3,3,0,0,0,3-3V13A1,1,0,0,0,21,12ZM5,20a1,1,0,0,1-1-1V4.73L6,5.87a1.08,1.08,0,0,0,1,0l3-1.72,3,1.72a1.08,1.08,0,0,0,1,0l2-1.14V19a3,3,0,0,0,.18,1Zm15-1a1,1,0,0,1-2,0V14h2Zm-6.44-2.83a.76.76,0,0,0-.18-.09.6.6,0,0,0-.19-.06,1,1,0,0,0-.9.27A1.05,1.05,0,0,0,12,17a1,1,0,0,0,.07.38,1.19,1.19,0,0,0,.22.33,1.15,1.15,0,0,0,.33.21.94.94,0,0,0,.76,0,1.15,1.15,0,0,0,.33-.21A1,1,0,0,0,14,17a1.05,1.05,0,0,0-.29-.71A1.58,1.58,0,0,0,13.56,16.17Zm.14-3.88a1,1,0,0,0-1.62.33A1,1,0,0,0,13,14a1,1,0,0,0,1-1,1,1,0,0,0-.08-.38A.91.91,0,0,0,13.7,12.29Z" /></svg>
+                            </a>
                             <button data-action="toggle-app" class="d-md-none btn btn-1 btn-pill btn-pn1">
                                 <svg class="icon16" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M10,13H3a1,1,0,0,0-1,1v7a1,1,0,0,0,1,1h7a1,1,0,0,0,1-1V14A1,1,0,0,0,10,13ZM9,20H4V15H9ZM21,2H14a1,1,0,0,0-1,1v7a1,1,0,0,0,1,1h7a1,1,0,0,0,1-1V3A1,1,0,0,0,21,2ZM20,9H15V4h5Zm1,4H14a1,1,0,0,0-1,1v7a1,1,0,0,0,1,1h7a1,1,0,0,0,1-1V14A1,1,0,0,0,21,13Zm-1,7H15V15h5ZM10,2H3A1,1,0,0,0,2,3v7a1,1,0,0,0,1,1h7a1,1,0,0,0,1-1V3A1,1,0,0,0,10,2ZM9,9H4V4H9Z" /></svg>
                             </button>
@@ -506,11 +508,14 @@
                                                 <div class="wheel__spacer"></div>
 
                                                 <div class="wheel__item" data-value="en">
-<img src="image/flag-en.png" />English</div>
+                                                    <img src="image/flag-en.png" />English
+                                                </div>
                                                 <div class="wheel__item" data-value="zh">
-<img src="image/flag-cn.png" />简体中文</div>
+                                                    <img src="image/flag-cn.png" />简体中文
+                                                </div>
                                                 <div class="wheel__item" data-value="ms">
-<img src="image/flag-my.png" />Bahasa Melayu</div>
+                                                    <img src="image/flag-my.png" />Bahasa Melayu
+                                                </div>
 
                                                 <div class="wheel__spacer"></div>
                                             </div>
@@ -521,14 +526,14 @@
                             </div>
                             <button class="iconBtn btn-pill" aria-label="Notifications">
                                 <svg viewBox="0 0 16 16" preserveAspectRatio="xMidYMid meet" class="icon" aria-hidden="true">
-                                    <path d="M7.5 0C4.46243 0 2 2.46243 2 5.5V10H1V11H14V10H13V5.5C13 2.46243 10.5376 0 7.5 0Z"  />
+                                    <path d="M7.5 0C4.46243 0 2 2.46243 2 5.5V10H1V11H14V10H13V5.5C13 2.46243 10.5376 0 7.5 0Z" />
                                     <path d="M5 12.5V12H10V12.5C10 13.8807 8.88071 15 7.5 15C6.11929 15 5 13.8807 5 12.5Z" />
                                 </svg>
                             </button>
 
                             <button class="iconBtn btn-pill" aria-label="Power">
                                 <svg viewBox="0 0 16 16" preserveAspectRatio="xMidYMid meet" class="icon" aria-hidden="true">
-                                    <path d="M8 0a1 1 0 00-1 1v6a1 1 0 002 0V1a1 1 0 00-1-1z"  />
+                                    <path d="M8 0a1 1 0 00-1 1v6a1 1 0 002 0V1a1 1 0 00-1-1z" />
                                     <path d="M12.665 2.781a1 1 0 10-1.333 1.491 5 5 0 11-6.665.001 1 1 0 00-1.333-1.49 7 7 0 109.331-.002z" />
                                 </svg>
                             </button>
