--- a/index.html
+++ b/index.html
@@ -71,10 +71,101 @@
                                             <path d="M12.517 12.834v1.9a1.27 1.27 0 0 1-1.267 1.267h-9.5a1.27 1.27 0 0 1-1.267-1.267v-1.9A3.176 3.176 0 0 1 3.65 9.667h5.7a3.176 3.176 0 0 1 3.167 3.167zM3.264 5.48A3.236 3.236 0 1 1 6.5 8.717a3.236 3.236 0 0 1-3.236-3.236z" />
                                         </svg>
                                     </span>
+
                                 </div>
                                 <div class="sidebar-header__profile-body">
                                     <div class="sidebar-header__profile-top">
-                                        <span class="pill__text" aria-label="playerName">PLAYER998</span>
+                                        <div class="d-flex align-items-center">
+                                            <span class="pill__text" aria-label="playerName">PLAYER998</span>
+
+                                            <div class="dropdown">
+                                                <button class="badge btn-level dropdown-toggle" id="playerLevel" type="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false" data-bs-auto-close="outside">
+                                                    <span class="badge__icon">
+                                                        <!-- Generator: Adobe Illustrator 25.0.0, SVG Export Plug-In  -->
+                                                        <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="17.3px"
+                                                             height="15px" viewBox="0 0 17.3 15" style="overflow:visible;enable-background:new 0 0 17.3 15;" xml:space="preserve">
+<defs>
+</defs>
+<g>
+                                                        <path class="st0" d="M3.9,8.7c1.5,0.9,3,1.7,4.5,2.6c0.2,0.1,0.3,0.1,0.5,0c1.5-0.9,3-1.8,4.6-2.6c0.1-0.1,0.2-0.2,0.2-0.4
+		c0-1.8,0-3.5,0-5.3c0-0.2-0.1-0.3-0.2-0.4c-1.5-0.9-3-1.7-4.6-2.6C8.7,0,8.6,0,8.4,0.1C6.9,1,5.4,1.8,3.9,2.7
+		C3.7,2.8,3.7,2.9,3.7,3.1c0,0.9,0,1.8,0,2.7c0,0.9,0,1.7,0,2.6C3.7,8.5,3.7,8.6,3.9,8.7z M5.7,4.7c0-0.1,0.1-0.1,0.2-0.1
+		c0.6-0.1,1.2-0.2,1.7-0.3c0,0,0.1,0,0.1-0.1C8,3.7,8.2,3.2,8.5,2.7c0-0.1,0.1-0.2,0.2-0.2c0,0,0.1,0,0.1,0c0.1,0,0.1,0.1,0.2,0.2
+		c0.2,0.5,0.5,1.1,0.7,1.6c0,0,0,0.1,0.1,0.1c0.6,0.1,1.1,0.2,1.7,0.3c0.1,0,0.2,0.1,0.2,0.1c0,0,0,0.1,0,0.1c0,0-0.1,0.1-0.1,0.1
+		c-0.4,0.4-0.8,0.9-1.2,1.3c0,0,0,0,0,0.1c0.1,0.4,0.1,0.9,0.2,1.3c0,0.2,0.1,0.3,0.1,0.5c0,0.1,0,0.2-0.2,0.2c-0.1,0-0.1,0-0.1,0
+		C9.7,8,9.2,7.7,8.7,7.5c0,0-0.1,0-0.1,0C8.1,7.7,7.6,8,7.1,8.3c-0.1,0-0.2,0.1-0.2,0C6.8,8.3,6.8,8.2,6.8,8.1
+		C6.9,7.5,7,6.9,7.1,6.3c0,0,0-0.1,0-0.1C7,6.1,6.9,6,6.8,5.9c-0.3-0.3-0.6-0.7-1-1C5.7,4.8,5.7,4.8,5.7,4.7z" />
+                                                        <path class="st0" d="M17.3,7.2c0-0.4,0-0.7,0-1.1c0-0.3-0.1-0.4-0.4-0.2c-0.8,0.4-1.6,0.9-2.4,1.3c-0.1,0.1-0.2,0.2-0.2,0.3
+		c0,0.6,0,1.1,0,1.7c0,0.1,0,0.2-0.1,0.3c-1.8,1-3.6,2.1-5.4,3.1c-0.1,0.1-0.2,0.1-0.3,0c-1.8-1.1-3.6-2.1-5.4-3.1
+		C3,9.3,3,9.3,3,9.2c0-0.6,0-1.1,0-1.7c0-0.1,0-0.2-0.2-0.3C2,6.8,1.2,6.3,0.4,5.9C0.1,5.8,0,5.9,0,6.1c0,0.7,0,1.4,0,2.1
+		c0,0.1,0.1,0.2,0.2,0.3c0.2,0.1,0.4,0.2,0.5,0.3c0.1,0,0.1,0.1,0.1,0.2c0,0.4,0,0.9,0,1.3c0,0.1,0,0.2,0.2,0.3
+		c2.5,1.4,5,2.9,7.4,4.3c0.1,0.1,0.2,0.1,0.4,0c2.5-1.4,5-2.9,7.4-4.3c0.1-0.1,0.2-0.2,0.2-0.3c0-0.4,0-0.9,0-1.3
+		c0-0.1,0-0.2,0.1-0.2c0.2-0.1,0.3-0.2,0.5-0.3c0.1-0.1,0.2-0.2,0.2-0.3C17.3,7.9,17.3,7.5,17.3,7.2z" />
+                                                        <path class="st0" d="M14.3,5.6c0,0.3,0.1,0.3,0.4,0.2c0.8-0.4,1.6-0.9,2.4-1.3c0.1-0.1,0.2-0.1,0.2-0.3c0-0.7,0-1.4,0-2.1
+		c0-0.2-0.1-0.3-0.4-0.2c-0.8,0.4-1.6,0.9-2.4,1.3c-0.1,0.1-0.2,0.2-0.2,0.3c0,0.4,0,0.7,0,1.1C14.3,4.9,14.3,5.2,14.3,5.6z" />
+                                                        <path class="st0" d="M0.2,4.5C1,4.9,1.8,5.4,2.6,5.8C2.8,5.9,3,5.9,3,5.6c0-0.4,0-0.7,0-1.1c0-0.4,0-0.7,0-1.1c0-0.1,0-0.2-0.2-0.3
+		C2,2.8,1.2,2.3,0.4,1.9C0.1,1.8,0,1.9,0,2.1c0,0.7,0,1.4,0,2.1C0,4.4,0.1,4.5,0.2,4.5z" />
+</g>
+</svg>
+
+                                                    </span>
+                                                    <span class="badge__text">LV.1</span>
+                                                </button>
+                                                <div class="dropdown-menu" aria-labelledby="playerLevel" aria-hidden="true">
+                                                    <div class="dropdown__inner">
+                                                        <div class="level">
+                                                            <a href="#" class="level__item">
+                                                                <span class="level__left">
+                                                                    <span class="level__dot">
+                                                                        <img src="image/menu-sports.png" />
+                                                                    </span>
+                                                                    <span>Sports</span>
+                                                                </span>
+                                                                <span class="level__right">LV.0</span>
+                                                            </a>
+                                                            <a href="#" class="level__item">
+                                                                <span class="level__left">
+                                                                    <span class="level__dot">
+                                                                        <img src="image/menu-casino.png" />
+                                                                    </span>
+                                                                    <span>casino</span>
+                                                                </span>
+                                                                <span class="level__right">LV.0</span>
+                                                            </a>
+                                                            <a href="#" class="level__item">
+                                                                <span class="level__left">
+                                                                    <span class="level__dot">
+                                                                        <img src="image/menu-slots.png" />
+                                                                    </span>
+                                                                    <span>Games</span>
+                                                                </span>
+                                                                <span class="level__right">LV.0</span>
+                                                            </a>
+                                                            <a href="#" class="level__item">
+                                                                <span class="level__left">
+                                                                    <span class="level__dot">
+                                                                        <img src="image/menu-lottery.png" />
+                                                                    </span>
+                                                                    <span>Lottery</span>
+                                                                </span>
+                                                                <span class="level__right">LV.0</span>
+                                                            </a>
+                                                            <a href="#" class="level__item">
+                                                                <span class="level__left">
+                                                                    <span class="level__dot">
+                                                                        <img src="image/menu-gaming2.png" />
+                                                                    </span>
+                                                                    <span>P2P</span>
+                                                                </span>
+                                                                <span class="level__right">LV.0</span>
+                                                            </a>
+                                                        </div>
+                                                    </div>
+                                                </div>
+
+                                            </div>
+
+                                        </div>
                                         <div class="sidebar-header__tools">
 
                                             <div id="togglesettings" class="settings-menu">
