--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                                                                 </span>
                                                                 <span class="level__right">LV.0</span>
                                                             </a>
-                                                            <a href="#" class="level__item">
+                                                            <a href="index—_p2p.html" class="level__item">
                                                                 <span class="level__left">
                                                                     <span class="level__dot">
                                                                         <img src="image/menu-gaming2.png" />
