--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="#">
+                                <a href="index-p2p.html">
                                     <img src="image/menu-gaming2.png" /><span class="span-toggle">P2P</span>
                                 </a>
                             </li>
