--- a/index-p2p.html
+++ b/index-p2p.html
@@ -376,7 +376,7 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="#" aria-current="page">
+                                <a href="#">
                                     <img src="image/menu-slots.png" /><span class="span-toggle">Slots</span>
                                 </a>
                             </li>
@@ -391,7 +391,7 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="index-p2p.html">
+                                <a href="index-p2p.html" aria-current="page">
                                     <img src="image/menu-gaming2.png" /><span class="span-toggle">P2P</span>
                                 </a>
                             </li>
