--- a/index-p2p.html
+++ b/index-p2p.html
@@ -376,7 +376,7 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="#">
+                                <a href="index.html">
                                     <img src="image/menu-slots.png" /><span class="span-toggle">Slots</span>
                                 </a>
                             </li>
