--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="#">
+                                <a href="index-lottery.html">
                                     <img src="image/menu-lottery.png" /><span class="span-toggle">Lottery</span>
                                 </a>
                             </li>
